...
                }
            }
        }
        
        
        enum Buttons {
            case Login
            case ForgotPassword
            case SignUpButton
            case CreateButton
            case ClearButton
            case ResetButton
            
...
                    textfield.textColor = Stylesheet.Colors.White
                    textfield.adjustsFontSizeToFitWidth = true
                    textfield.autocapitalizationType = .none
                    textfield.autocorrectionType = .no
                    textfield.keyboardType = .emailAddress
                    textfield.returnKeyType = .default
                    textfield.placeholder = "Enter email"
                    
                case .LoginPassword:
                    
                    
                    textfield.borderStyle = .none
                    textfield.layer.borderColor = (Stylesheet.Colors.LightGrey).cgColor
...
                    textfield.textColor = Stylesheet.Colors.LightGrey
                    textfield.adjustsFontSizeToFitWidth = true
                    textfield.autocapitalizationType = .none
                    textfield.autocorrectionType = .no
                    textfield.keyboardType = .asciiCapable
                    textfield.returnKeyType = .default
                    textfield.placeholder = "Password"
                    textfield.isSecureTextEntry = true
                    let border = UIView()
                    border.backgroundColor = UIColor(displayP3Red: (229/255), green: (229/255), blue: (229/255), alpha: 1.0)
                    border.translatesAutoresizingMaskIntoConstraints = false
                    textfield.addSubview(border)
                    border.heightAnchor.constraint(equalToConstant: 1).isActive = true
...
