...
    
    let cellSpacing: CGFloat = 5.0
    private let imagePickerController = UIImagePickerController()
    
    override func viewDidLoad() {
        super.viewDidLoad()
        self.title = "Favorite"
        view.addSubview(profileView)
        view.backgroundColor = .green
        setupViews()
        profileView.collectionView.dataSource = self
        profileView.collectionView.delegate = self
    }
    
    private func setupViews() {
        //right bar button
        let addLogoutItem = UIBarButtonItem(title: "Log Out", style: UIBarButtonItemStyle.plain, target: self, action: #selector(logoutPressed))
        navigationItem.rightBarButtonItem = addLogoutItem
        profileView.changeProfileImageButton.addTarget(self, action: #selector(changeProfileButtonPressed), for: .touchUpInside)
    }
    
    
    @objc private func logoutPressed() {
...
